# xpsupport

./: .gitignore  .gitmodules  Cargo.toml  ReadMe.md  build.rs
src/: CMakeLists.txt  condvar.c  gthread-win32.c  hook.c  lib.rs  main.c  main.cpp  srw.c  sync.c  sync.h  sync_v2.c  sync_v3.c
src/minhook/include/: MinHook.h
src/minhook/src/: hook.c  trampoline.c  trampoline.h
