[package]
name = "xpsupport"
version = "0.1.3"
authors = ["lynnux <lynnux@qq.com>"]
build = "build.rs"
link = "minhook"
keywords = ["xp", "xpsupport", "vista", "RWLock", "Condvar", "windows"]
license = "MIT"
description = "Using a hack way to support xp, only need to link one dll. More details please visit repository."
repository = "https://github.com/lynnux/xpsupport"

[dependencies]

[lib]
name = "xpsupport"
crate-type = ["cdylib"]

[build-dependencies]
gcc = "0.3.45"
rustc_version = "0.2"
