[package]
name = "xpsupport"
version = "0.2.1"
authors = ["lynnux <lynnux@qq.com>"]
build = "build.rs"
link = "minhook"
keywords = ["xp", "xpsupport", "RWLock", "Condvar", "windows"]
license = "MIT"
description = "Hook serveral APIs to enable XP support for rust."
repository = "https://github.com/lynnux/xpsupport"

[dependencies]

[lib]
name = "xpsupport"

[build-dependencies]
cc = "1.0.46"
rustc_version = "0.2.3"
